--- a/notebooks/05-ContentBased/ContentRecs.ipynb
+++ b/notebooks/05-ContentBased/ContentRecs.ipynb
@@ -6,19 +6,21 @@
       "source": [
         "# Content-Based Recommendations\n",
         "\n",
-        "This notebook demonstrates content-based recommendations using the ContentKNN algorithm. It compares the performance of content-based recommendations against random recommendations using various evaluation metrics."
+        "This notebook demonstrates content-based recommendations using the ContentKNN algorithm. \n",
+        "\n",
+        "It compares the performance of content-based recommendations against random recommendations using various accuracy and top-n metrics."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Import Required Libraries"
+        "### Import Required Libraries"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,19 +30,20 @@
         "from surprise import NormalPredictor\n",
         "\n",
         "import random\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas as pd"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Set Random Seeds for Reproducibility"
+        "### Set Random Seeds for Reproducibility"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -52,7 +55,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load Data and Initialize Evaluator"
+        "### Load Data and Initialize Evaluator"
       ]
     },
     {
@@ -61,31 +64,27 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()\n",
+        "(lens, ratings_data, rankings) = MovieLens.load()\n",
         "\n",
-        "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)"
+        "evaluator = Evaluator(ratings_data, rankings)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Add Algorithms for Comparison"
+        "### Add algorithms to evaluate"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Add ContentKNN algorithm\n",
         "contentKNN = ContentKNN()\n",
         "evaluator.add_algorithm(contentKNN, \"ContentKNN\")\n",
         "\n",
-        "# Add random recommendations as a baseline\n",
         "Random = NormalPredictor()\n",
         "evaluator.add_algorithm(Random, \"Random\")"
       ]
@@ -94,7 +93,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate and Compare Algorithms"
+        "### Evaluate and Compare Algorithms"
       ]
     },
     {
@@ -103,9 +102,105 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(True)\n",
-        "\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>RMSE</th>\n",
+              "      <th>MAE</th>\n",
+              "      <th>HR</th>\n",
+              "      <th>cHR</th>\n",
+              "      <th>ARHR</th>\n",
+              "      <th>Coverage</th>\n",
+              "      <th>Diversity</th>\n",
+              "      <th>Novelty</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Algorithm</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ContentKNN</th>\n",
+              "      <td>0.937506</td>\n",
+              "      <td>0.726342</td>\n",
+              "      <td>0.002981</td>\n",
+              "      <td>0.002981</td>\n",
+              "      <td>0.001703</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.573919</td>\n",
+              "      <td>4559.691505</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Random</th>\n",
+              "      <td>1.438459</td>\n",
+              "      <td>1.147809</td>\n",
+              "      <td>0.008942</td>\n",
+              "      <td>0.008942</td>\n",
+              "      <td>0.001505</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.071946</td>\n",
+              "      <td>557.836513</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
+              "Algorithm                                                                \n",
+              "ContentKNN  0.937506  0.726342  0.002981  0.002981  0.001703       1.0   \n",
+              "Random      1.438459  1.147809  0.008942  0.008942  0.001505       1.0   \n",
+              "\n",
+              "            Diversity      Novelty  \n",
+              "Algorithm                           \n",
+              "ContentKNN   0.573919  4559.691505  \n",
+              "Random       0.071946   557.836513  "
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df"
       ]
     },
     {
@@ -114,14 +209,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "RecSys",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -135,7 +230,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
