--- a/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
+++ b/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
@@ -15,30 +15,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Import Required Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Import required libraries\n",
         "from recsys.MovieLens import MovieLens\n",
         "from surprise import KNNBasic\n",
         "from surprise import NormalPredictor\n",
         "from recsys.Evaluator import Evaluator\n",
         "\n",
         "import random\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas as pd"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 2,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "# Set random seeds for reproducibility\n",
-        "np.random.seed(0)\n",
-        "random.seed(0)"
+        "### Set Random Seeds for Reproducibility"
       ]
     },
     {
@@ -47,18 +50,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load the MovieLens dataset\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()\n",
-        "\n",
-        "# Initialize the evaluator\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)"
+        "np.random.seed(0)\n",
+        "random.seed(0)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Initialize Recommender Algorithms\n",
+        "### Load Data and Initialize Evaluator"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lens, ratings_data, rankings = MovieLens.load()\n",
+        "\n",
+        "evaluator = Evaluator(ratings_data, rankings)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Initialize Recommender Algorithms\n",
         "\n",
         "We'll compare three different approaches:\n",
         "1. User-based KNN with cosine similarity\n",
@@ -72,24 +90,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# User-based KNN\n",
-        "UserKNN = KNNBasic(sim_options={'name': 'cosine', 'user_based': True})\n",
-        "evaluator.add_algorithm(UserKNN, \"User KNN\")\n",
+        "user_knn = KNNBasic(sim_options={'name': 'cosine', 'user_based': True})\n",
+        "evaluator.add_algorithm(user_knn, \"User KNN\")\n",
         "\n",
-        "# Item-based KNN\n",
-        "ItemKNN = KNNBasic(sim_options={'name': 'cosine', 'user_based': False})\n",
-        "evaluator.add_algorithm(ItemKNN, \"Item KNN\")\n",
+        "item_knn = KNNBasic(sim_options={'name': 'cosine', 'user_based': False})\n",
+        "evaluator.add_algorithm(item_knn, \"Item KNN\")\n",
         "\n",
-        "# Random recommendations (baseline)\n",
-        "Random = NormalPredictor()\n",
-        "evaluator.add_algorithm(Random, \"Random\")"
+        "random_model = NormalPredictor()\n",
+        "evaluator.add_algorithm(random_model, \"Random\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate the Algorithms\n",
+        "### Evaluate the Algorithms\n",
         "\n",
         "Let's run the evaluation to compare the performance of our algorithms."
       ]
@@ -100,15 +115,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(True)\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate Sample Recommendations\n",
+        "### Evaluation results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Generate Sample Recommendations\n",
         "\n",
         "Let's look at some sample recommendations for a user to see how the different approaches perform in practice."
       ]
@@ -119,7 +152,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
