--- a/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
@@ -33,7 +33,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Data Loading\n",
+        "### Setup and Data Loading\n",
         "\n",
         "We'll use user ID 85 as our test subject and set k=10 for the number of similar items to consider."
       ]
@@ -49,7 +49,7 @@
         "k = 10\n",
         "\n",
         "# Load the MovieLens dataset\n",
-        "ml, data, ratings = MovieLens.load()\n",
+        "lens, data, ratings = MovieLens.load()\n",
         "\n",
         "# Build the training set\n",
         "train_set = data.build_full_trainset()"
@@ -59,7 +59,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Train the Model\n",
+        "### Train the Model\n",
         "\n",
         "We'll train an item-based KNN model using cosine similarity."
       ]
@@ -85,7 +85,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate Recommendations\n",
+        "### Generate Recommendations\n",
         "\n",
         "For our test user, we'll:\n",
         "1. Get their top k rated items\n",
@@ -124,7 +124,7 @@
         "for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
         "    if not item_id in watched:\n",
         "        movie_id = train_set.to_raw_iid(item_id)\n",
-        "        print(ml.get_movie_name(int(movie_id)), rating_sum)\n",
+        "        print(lens.get_movie_name(int(movie_id)), rating_sum)\n",
         "        pos += 1\n",
         "        if (pos > 10):\n",
         "            break"
