--- a/notebooks/06-CollaborativeFiltering/SimpleUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleUserCF.ipynb
@@ -21,7 +21,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Import required libraries\n",
         "from recsys.MovieLens import MovieLens\n",
         "from surprise import KNNBasic\n",
         "import heapq\n",
@@ -33,7 +32,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Data Loading\n",
+        "### Setup and Data Loading\n",
         "\n",
         "We'll use user ID 85 as our test subject and set k=10 for the number of similar users to consider."
       ]
@@ -45,11 +44,11 @@
       "outputs": [],
       "source": [
         "# Set parameters\n",
-        "test_subject = '85'\n",
+        "test_uid = 85\n",
         "k = 10\n",
         "\n",
         "# Load the MovieLens dataset\n",
-        "ml, data, ratings = MovieLens.load()\n",
+        "lens, data, ratings = MovieLens.load()\n",
         "\n",
         "# Build the training set\n",
         "train_set = data.build_full_trainset()"
@@ -59,7 +58,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Train the Model\n",
+        "### Train the Model\n",
         "\n",
         "We'll train a user-based KNN model using cosine similarity."
       ]
@@ -85,7 +84,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate Recommendations\n",
+        "### Generate Recommendations\n",
         "\n",
         "For our test user, we'll:\n",
         "1. Find their k most similar users\n",
@@ -100,39 +99,38 @@
       "outputs": [],
       "source": [
         "# Get the test user's inner ID\n",
-        "testUserInnerID = train_set.to_inner_uid(test_subject)\n",
+        "test_inner_uid = train_set.to_inner_uid(str(test_uid))\n",
         "\n",
         "# Find similar users\n",
-        "similarityRow = similarity_matrix[testUserInnerID]\n",
+        "user_similarities = similarity_matrix[test_inner_uid]\n",
         "\n",
         "similar_users = []\n",
-        "for inner_id, score in enumerate(similarityRow):\n",
-        "    if (inner_id != testUserInnerID):\n",
-        "        similar_users.append((inner_id, score))\n",
+        "for inner_uid, score in enumerate(user_similarities):\n",
+        "    if (inner_uid != test_inner_uid):\n",
+        "        similar_users.append((inner_uid, score))\n",
         "\n",
         "k_neighbours = heapq.nlargest(k, similar_users, key=lambda t: t[1])\n",
         "\n",
         "# Get items rated by similar users\n",
         "candidates = defaultdict(float)\n",
         "for similar_user in k_neighbours:\n",
-        "    inner_id = similar_user[0]\n",
+        "    inner_uid = similar_user[0]\n",
         "    user_similarity_score = similar_user[1]\n",
-        "    users_own_ratings = train_set.ur[inner_id]\n",
+        "    users_own_ratings = train_set.ur[inner_uid]\n",
         "    for rating in users_own_ratings:\n",
         "        candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "\n",
         "# Track items the user has already seen\n",
         "watched = {}\n",
-        "for item_id, rating in train_set.ur[testUserInnerID]:\n",
+        "for item_id, rating in train_set.ur[test_inner_uid]:\n",
         "    watched[item_id] = 1\n",
         "\n",
-        "# Get and display top recommendations\n",
-        "print(\"Top 10 recommendations for user\", test_subject, \":\\n\")\n",
+        "print(\"Top 10 recommendations for user\", test_uid, \":\\n\")\n",
         "pos = 0\n",
         "for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
         "    if not item_id in watched:\n",
         "        movie_id = train_set.to_raw_iid(item_id)\n",
-        "        print(ml.get_movie_name(int(movie_id)), rating_sum)\n",
+        "        print(lens.get_movie_name(int(movie_id)), rating_sum)\n",
         "        pos += 1\n",
         "        if (pos > 10):\n",
         "            break"
@@ -141,7 +139,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "RecSys",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -155,7 +153,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
