--- a/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
+        "### Setup and Imports\n",
         "\n",
         "First, let's import the necessary libraries and set up our random seeds for reproducibility."
       ]
@@ -31,6 +31,7 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
@@ -40,7 +41,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load Data\n",
+        "### Load Data\n",
         "\n",
         "Load the MovieLens dataset and prepare it for evaluation."
       ]
@@ -51,15 +52,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Initialize Evaluator\n",
+        "### Initialize Evaluator\n",
         "\n",
         "Create an evaluator instance to compare different algorithms."
       ]
@@ -70,15 +70,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)"
+        "evaluator = Evaluator(ratings_data, rankings)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Add Algorithms\n",
+        "### Add Algorithms\n",
         "\n",
         "Add the algorithms we want to compare: SVD, SVD++, and Random recommendations."
       ]
@@ -90,23 +89,22 @@
       "outputs": [],
       "source": [
         "# SVD\n",
-        "SVD = SVD(verbose=False)\n",
-        "evaluator.add_algorithm(SVD, \"SVD\")\n",
+        "svd = SVD(verbose=False)\n",
+        "evaluator.add_algorithm(svd, \"SVD\")\n",
         "\n",
         "# SVD++\n",
-        "SVDPlusPlus = SVDpp()\n",
-        "evaluator.add_algorithm(SVDPlusPlus, \"SVD++\")\n",
+        "svd_pp = SVDpp()\n",
+        "evaluator.add_algorithm(svd_pp, \"SVD++\")\n",
         "\n",
-        "# Just make random recommendations\n",
-        "Random = NormalPredictor()\n",
-        "evaluator.add_algorithm(Random, \"Random\")"
+        "random_rec = NormalPredictor()\n",
+        "evaluator.add_algorithm(random_rec, \"Random\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Algorithms\n",
+        "### Evaluate Algorithms\n",
         "\n",
         "Run the evaluation and compare the performance of all algorithms."
       ]
@@ -117,15 +115,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(False)\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Sample Recommendations\n",
+        "### Evaluation results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Sample Recommendations\n",
         "\n",
         "Generate and display some sample recommendations using the evaluated algorithms."
       ]
@@ -136,7 +152,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
