--- a/notebooks/07-MatrixFactorization/SVDTuning.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDTuning.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
+        "### Setup and Imports\n",
         "\n",
         "First, let's import the necessary libraries and set up our random seeds for reproducibility."
       ]
@@ -32,6 +32,7 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
@@ -41,7 +42,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load Data\n",
+        "### Load Data\n",
         "\n",
         "Load the MovieLens dataset and prepare it for evaluation."
       ]
@@ -52,15 +53,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Grid Search for Best Parameters\n",
+        "### Grid Search for Best Parameters\n",
         "\n",
         "We'll use GridSearchCV to find the optimal hyperparameters for the SVD algorithm. We'll search over:\n",
         "- Number of epochs (20, 30)\n",
@@ -82,7 +82,7 @@
         "}\n",
         "gs = GridSearchCV(SVD, param_grid, measures=['rmse', 'mae'], cv=3)\n",
         "\n",
-        "gs.fit(evaluation_dataset)\n",
+        "gs.fit(ratings_data)\n",
         "\n",
         "# best RMSE score\n",
         "print(\"Best RMSE score attained: \", gs.best_score['rmse'])\n",
@@ -95,7 +95,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Initialize Evaluator and Add Algorithms\n",
+        "### Initialize Evaluator and Add Algorithms\n",
         "\n",
         "Now we'll create an evaluator and add three algorithms to compare:\n",
         "1. SVD with tuned parameters\n",
@@ -109,31 +109,30 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)\n",
+        "evaluator = Evaluator(ratings_data, rankings)\n",
         "\n",
         "# Add tuned SVD\n",
         "params = gs.best_params['rmse']\n",
-        "SVDtuned = SVD(n_epochs=params['n_epochs'], \n",
+        "svd_tuned = SVD(n_epochs=params['n_epochs'], \n",
         "               lr_all=params['lr_all'], \n",
         "               n_factors=params['n_factors'],\n",
         "               verbose=False)\n",
-        "evaluator.add_algorithm(SVDtuned, \"SVD - Tuned\")\n",
+        "evaluator.add_algorithm(svd_tuned, \"SVD - Tuned\")\n",
         "\n",
         "# Add untuned SVD\n",
-        "SVDUntuned = SVD(verbose=False)\n",
-        "evaluator.add_algorithm(SVDUntuned, \"SVD - Untuned\")\n",
+        "svd_untuned = SVD(verbose=False)\n",
+        "evaluator.add_algorithm(svd_untuned, \"SVD - Untuned\")\n",
         "\n",
         "# Add random recommendations as baseline\n",
-        "Random = NormalPredictor()\n",
-        "evaluator.add_algorithm(Random, \"Random\")"
+        "random_rec = NormalPredictor()\n",
+        "evaluator.add_algorithm(random_rec, \"Random\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Algorithms\n",
+        "### Evaluate Algorithms\n",
         "\n",
         "Run the evaluation to compare the performance of all algorithms."
       ]
@@ -144,15 +143,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(True)\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Sample Recommendations\n",
+        "### Evaluation results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Sample Recommendations\n",
         "\n",
         "Generate and display some sample recommendations using the evaluated algorithms."
       ]
@@ -163,7 +180,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
