--- a/notebooks/08-DeepLearningIntro/Keras-CNN.ipynb
+++ b/notebooks/08-DeepLearningIntro/Keras-CNN.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "And now we train our model... to make things go a little faster, we'll use batches of 32.\n",
     "\n",
-    "## Warning\n",
+    "### Warning\n",
     "\n",
     "This could take hours to run, and your computer's CPU will be maxed out during that time! Don't run the next block unless you can tie up your computer for a long time. It will print progress as each epoch is run, but each epoch can take around 20 minutes."
    ]
