--- a/notebooks/08-DeepLearningIntro/Keras-RNN.ipynb
+++ b/notebooks/08-DeepLearningIntro/Keras-RNN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Recurring Neural Networks with Keras\n",
     "\n",
-    "## Sentiment analysis from movie reviews\n",
+    "### Sentiment analysis from movie reviews\n",
     "\n",
     "This notebook is inspired by the imdb_lstm.py example that ships with Keras. But since I used to run IMDb's engineering department, I couldn't resist!\n",
     "\n",
@@ -410,7 +410,7 @@
    "source": [
     "Now we will actually train our model. RNN's, like CNN's, are very resource heavy. Keeping the batch size relatively small is the key to enabling this to run on your PC at all. In the real word of course, you'd be taking advantage of GPU's installed across many computers on a cluster to make this scale a lot better.\n",
     "\n",
-    "## Warning\n",
+    "### Warning\n",
     "\n",
     "This will take a very long time to run, even on a fast PC! Don't execute the next blocks unless you're prepared to tie up your computer for an hour or more."
    ]
