--- a/notebooks/08-DeepLearningIntro/Keras.ipynb
+++ b/notebooks/08-DeepLearningIntro/Keras.ipynb
@@ -562,7 +562,7 @@
    "source": [
     "You can see most of the ones it's having trouble with, are images a human would have trouble with as well!\n",
     "\n",
-    "## Excercise\n",
+    "### Excercise\n",
     "\n",
     "As before, see if you can improve on the results! Does running more epochs help considerably? How about trying different optimizers?\n",
     "\n",
