--- a/notebooks/08-DeepLearningIntro/PoliticsExercise.ipynb
+++ b/notebooks/08-DeepLearningIntro/PoliticsExercise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Keras Exercise\n",
     "\n",
-    "## Predict political party based on votes\n",
+    "### Predict political party based on votes\n",
     "\n",
     "As a fun little example, we'll use a public data set of how US congressmen voted on 17 different issues in the year 1984. Let's see if we can figure out their political party based on their votes alone, using a deep neural network!\n",
     "\n",
@@ -875,7 +875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My implementation is below\n",
+    "### My implementation is below\n",
     "\n",
     "# No peeking!\n",
     "\n",
