--- a/notebooks/08-DeepLearningIntro/Tensorflow.ipynb
+++ b/notebooks/08-DeepLearningIntro/Tensorflow.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Be sure to \"conda install tensorflow\" or \"conda install tensorflow-gpu\" first!\n",
     "\n",
-    "## The world's simplest Tensorflow application\n",
+    "### The world's simplest Tensorflow application\n",
     "\n",
     "Let's begin by writing a really simple program to illustrate Tensorflow's main concepts. We'll set up two Variables, named \"a\" and \"b\", which each contain a tensor which contains a single value - the number 1, and the number 2.\n",
     "\n",
@@ -50,7 +50,7 @@
     "collapsed": true
    },
    "source": [
-    "## And now for something more interesting: Handwriting recognition\n",
+    "### And now for something more interesting: Handwriting recognition\n",
     "\n",
     "The standard example for machine learning these days is the MNIST data set, a collection of 70,000 handwriting samples of the numbers 0-9. Our challenge - to predict which number each handwritten image represents.\n",
     "\n",
@@ -664,7 +664,7 @@
    "source": [
     "To be honest, I'd be a little unsure about some of those myself!\n",
     "\n",
-    "## Exercise\n",
+    "### Exercise\n",
     "\n",
     "See if you can improve upon the accuracy. Try using more hidden neurons (nodes). Try using fewer! Try a different learning rate. Try adding another hidden layer. Try different batch sizes. What's the best accuracy you can get from this multi-layer perceptron?"
    ]
