--- a/notebooks/11-Challenges/EvaluateUserCF-Exploration.ipynb
+++ b/notebooks/11-Challenges/EvaluateUserCF-Exploration.ipynb
@@ -13,9 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
-        "\n",
-        "First, let's import the necessary libraries and load our data."
+        "### Import Required Libraries"
       ]
     },
     {
@@ -31,16 +29,31 @@
         "from collections import defaultdict\n",
         "from operator import itemgetter\n",
         "from recsys.RecommenderMetrics import RecommenderMetrics\n",
-        "from recsys.EvaluationDataset import EvaluationDataset\n",
-        "\n",
-        "ml, data, rankings = MovieLens.load()"
+        "from recsys.EvaluationDataset import EvaluationDataset"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Prepare Evaluation Data\n",
+        "### Load Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "lens, data, rankings = MovieLens.load()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Prepare Evaluation Data\n",
         "\n",
         "Set up the evaluation data using leave-one-out cross-validation (loo_iterator) to test our recommender system."
       ]
@@ -62,7 +75,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Train the Model\n",
+        "### Train the Model\n",
         "\n",
         "Train a KNN-based model using cosine similarity for user-based collaborative filtering."
       ]
@@ -87,7 +100,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Get New Movies for Exploration\n",
+        "### Get New Movies for Exploration\n",
         "\n",
         "Retrieve a list of new movies that we can use to promote exploration in our recommendations."
       ]
@@ -99,7 +112,7 @@
       "outputs": [],
       "source": [
         "# Get new movies that need data\n",
-        "new_movies = ml.get_new_movies()\n",
+        "new_movies = lens.get_new_movies()\n",
         "exploration_slot = 9  # Position in recommendations where we'll insert a new movie"
       ]
     },
@@ -107,7 +120,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate Recommendations with Exploration\n",
+        "### Generate Recommendations with Exploration\n",
         "\n",
         "For each user, we'll:\n",
         "1. Find their k most similar users\n",
@@ -171,7 +184,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Performance\n",
+        "### Evaluate Performance\n",
         "\n",
         "Measure the hit rate of our recommendations to see how well the system performs with the exploration component."
       ]
