--- a/notebooks/11-Challenges/EvaluateUserCF-Outliers.ipynb
+++ b/notebooks/11-Challenges/EvaluateUserCF-Outliers.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
+        "### Setup and Imports\n",
         "\n",
         "First, let's import the necessary libraries and load our data."
       ]
@@ -39,7 +39,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Prepare Evaluation Data\n",
+        "### Prepare Evaluation Data\n",
         "\n",
         "Set up the evaluation data using leave-one-out cross-validation (loo_iterator) to test our recommender system. This approach helps us understand how well the system performs for individual users."
       ]
@@ -61,7 +61,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Train the Model\n",
+        "### Train the Model\n",
         "\n",
         "Train a KNN-based model using cosine similarity for user-based collaborative filtering. This will help us identify similar users and their preferences."
       ]
@@ -86,7 +86,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate Recommendations\n",
+        "### Generate Recommendations\n",
         "\n",
         "For each user, we'll:\n",
         "1. Find their k most similar users\n",
@@ -147,7 +147,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Performance\n",
+        "### Evaluate Performance\n",
         "\n",
         "Measure the hit rate of our recommendations to see how well the system performs. This metric tells us how often our recommendations match the user's actual preferences."
       ]
