--- a/notebooks/13-Hybrid/HybridTest.ipynb
+++ b/notebooks/13-Hybrid/HybridTest.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
+        "### Setup and Imports\n",
         "\n",
         "First, let's import the necessary libraries and set up our random seeds for reproducibility."
       ]
@@ -39,7 +39,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load Data\n",
+        "### Load Data\n",
         "\n",
         "Load the MovieLens dataset and prepare it for evaluation."
       ]
@@ -51,14 +51,14 @@
       "outputs": [],
       "source": [
         "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
+        "ml, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Initialize Evaluator\n",
+        "### Initialize Evaluator\n",
         "\n",
         "Create an evaluator instance to measure the performance of our algorithms."
       ]
@@ -70,14 +70,14 @@
       "outputs": [],
       "source": [
         "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)"
+        "evaluator = Evaluator(ratings_data, rankings)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Create and Configure Algorithms\n",
+        "### Create and Configure Algorithms\n",
         "\n",
         "We'll create three algorithms:\n",
         "1. A simple RBM with 40 epochs\n",
@@ -105,7 +105,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Add Algorithms to Evaluator\n",
+        "### Add Algorithms to Evaluator\n",
         "\n",
         "Add all three algorithms to the evaluator for comparison."
       ]
@@ -125,7 +125,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Algorithms\n",
+        "### Evaluate Algorithms\n",
         "\n",
         "Run the evaluation to compare the performance of all algorithms. This will help us understand how the hybrid approach performs compared to its individual components."
       ]
@@ -144,7 +144,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Sample Recommendations\n",
+        "### Sample Recommendations\n",
         "\n",
         "Generate and display some sample recommendations using the evaluated algorithms. This will help us qualitatively assess the differences between the individual algorithms and the hybrid approach."
       ]
