--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -100,16 +100,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x107a477a0>"
+              "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7911e2150b00>"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -133,16 +133,16 @@
           "text": [
             "We recommend:\n",
             "\n",
-            "Godfather, The (1972) 4.6\n",
-            "Happiness (1998) 4.4\n",
-            "Star Wars: Episode V - The Empire Strikes Back (1980) 4.4\n",
-            "Producers, The (1968) 4.4\n",
-            "Wallace & Gromit: The Best of Aardman Animation (1996) 4.4\n",
-            "Reservoir Dogs (1992) 4.4\n",
-            "It Happened One Night (1934) 4.4\n",
-            "Crimes and Misdemeanors (1989) 4.4\n",
-            "Departed, The (2006) 4.4\n",
-            "Cube (1997) 4.3\n"
+            "Ran (1985) 4.6\n",
+            "Godfather: Part II, The (1974) 4.6\n",
+            "Amadeus (1984) 4.5\n",
+            "Godfather, The (1972) 4.5\n",
+            "Star Wars: Episode VI - Return of the Jedi (1983) 4.4\n",
+            "Cinema Paradiso (Nuovo cinema Paradiso) (1989) 4.4\n",
+            "Matrix, The (1999) 4.3\n",
+            "Psycho (1960) 4.3\n",
+            "Let the Right One In (LÃ¥t den rÃ¤tte komma in) (2008) 4.3\n",
+            "Goodfellas (1990) 4.3\n"
           ]
         }
       ],
@@ -182,7 +182,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
