--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -2,18 +2,9 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The autoreload extension is already loaded. To reload it, use:\n",
-            "  %reload_ext autoreload\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -48,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -134,7 +125,7 @@
               "2       1     1061     3.0  1260759182"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -155,23 +146,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x12f103140>"
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x7ff213fe9fa0>"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Initialize MovieLens data loader & load data\n",
-        "ml, data, rankings  = MovieLens.load()\n",
+        "lens, data, rankings  = MovieLens.load()\n",
         "\n",
         "# Generate item similarities so we can measure diversity later\n",
         "full_train_set = data.build_full_trainset()\n",
@@ -189,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -210,14 +201,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RMSE: 0.9033701087151802\n",
+            "RMSE: 0.9033701087151801\n",
             "MAE: 0.6977882196132263\n"
           ]
         }
@@ -236,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -299,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -334,7 +325,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "RecSys",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -348,7 +339,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
