--- a/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
@@ -17,12 +17,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Import Required Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Import required libraries\n",
         "from recsys.MovieLens import MovieLens\n",
         "from surprise import KNNBasic\n",
         "import heapq\n",
@@ -34,13 +40,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Load Data and Initialize Evaluator"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load the MovieLens dataset\n",
-        "ml, data, rankings = MovieLens.load()\n",
+        "lens, data, rankings = MovieLens.load()\n",
         "\n",
         "# Initialize evaluation data with leave-one-out cross-validation\n",
         "evalData = EvaluationDataset(data, rankings)"
@@ -50,14 +62,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Train the Model\n",
+        "### Train the Model\n",
         "\n",
         "We'll train a user-based KNN model using cosine similarity on the leave-one-out training set."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -70,7 +82,7 @@
         "    'user_based': True\n",
         "}\n",
         "\n",
-        "model = KNNBasic(sim_options=sim_options)\n",
+        "model = KNNBasic(sim_options=sim_options, verbose=False)\n",
         "model.fit(train_set)\n",
         "similarity_matrix = model.compute_similarities()"
       ]
@@ -79,7 +91,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate Recommendations\n",
+        "### Generate Recommendations\n",
         "\n",
         "For each user, we'll:\n",
         "1. Find their k most similar users\n",
@@ -140,25 +152,37 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Performance\n",
+        "### Evaluate Performance\n",
         "\n",
         "Let's measure the hit rate of our recommendations against the test set."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Hit Rate: 0.05514157973174367'"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Calculate and print the hit rate\n",
-        "print(\"Hit Rate:\", RecommenderMetrics.hit_rate(top_n, loo_test_set))"
+        "hit_rate = RecommenderMetrics.hit_rate(top_n, loo_test_set)\n",
+        "\n",
+        "f\"Hit Rate: {hit_rate}\""
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "RecSys",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -172,7 +196,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
