--- a/notebooks/08-DeepLearningIntro/PandasTutorial.ipynb
+++ b/notebooks/08-DeepLearningIntro/PandasTutorial.ipynb
@@ -13,13 +13,13 @@
     "\n",
     "It's one of three libraries you'll encounter repeatedly in the field of data science:\n",
     "\n",
-    "## Pandas\n",
+    "### Pandas\n",
     "Introduces \"Data Frames\" and \"Series\" that allow you to slice and dice rows and columns of information.\n",
     "\n",
-    "## NumPy\n",
+    "### NumPy\n",
     "Usually you'll encounter \"NumPy arrays\", which are multi-dimensional array objects. It is easy to create a Pandas DataFrame from a NumPy array, and Pandas DataFrames can be cast as NumPy arrays. NumPy arrays are mainly important because of...\n",
     "\n",
-    "## Scikit_Learn\n",
+    "### Scikit_Learn\n",
     "The machine learning library we'll use throughout this course is scikit_learn, or sklearn, and it generally takes NumPy arrays as its input.\n",
     "\n",
     "So, a typical thing to do is to load, clean, and manipulate your input data using Pandas. Then convert your Pandas DataFrame into a NumPy array as it's being passed into some Scikit_Learn function. That conversion can often happen automatically.\n",
@@ -1183,7 +1183,7 @@
     "editable": true
    },
    "source": [
-    "## Exercise\n",
+    "### Exercise\n",
     "\n",
     "Try extracting rows 5-10 of our DataFrame, preserving only the \"Previous Employers\" and \"Hired\" columns. Assign that to a new DataFrame, and create a histogram plotting the distribution of the previous employers in this subset of the data."
    ]
