--- a/notebooks/09-DeepLearning/RBMBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/RBMBakeOff.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
+        "### Setup and Imports\n",
         "\n",
         "First, let's import the necessary libraries and set up our random seeds for reproducibility."
       ]
@@ -31,6 +31,7 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
@@ -40,7 +41,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load Data\n",
+        "### Load Data\n",
         "\n",
         "Load the MovieLens dataset and prepare it for evaluation."
       ]
@@ -51,17 +52,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Initialize Evaluator\n",
-        "\n",
-        "Create an evaluator instance to compare different algorithms."
+        "### Initialize Evaluator"
       ]
     },
     {
@@ -70,15 +68,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)"
+        "evaluator = Evaluator(ratings_data, rankings)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Add Algorithms\n",
+        "### Add Algorithms\n",
         "\n",
         "Add the algorithms we want to compare:\n",
         "1. RBM (Restricted Boltzmann Machine) with 20 epochs\n",
@@ -91,20 +88,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# RBM\n",
-        "RBM = RBM(epochs=20)\n",
-        "evaluator.add_algorithm(RBM, \"RBM\")\n",
+        "rbm = RBM(epochs=20)\n",
+        "evaluator.add_algorithm(rbm, \"RBM\")\n",
         "\n",
-        "# Just make random recommendations\n",
-        "Random = NormalPredictor()\n",
-        "evaluator.add_algorithm(Random, \"Random\")"
+        "random_rec = NormalPredictor()\n",
+        "evaluator.add_algorithm(random_rec, \"Random\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Algorithms\n",
+        "### Evaluate Algorithms\n",
         "\n",
         "Run the evaluation to compare the performance of all algorithms. The evaluation will include various metrics such as RMSE, MAE, and hit rate."
       ]
@@ -115,17 +110,37 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(True)\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Sample Recommendations\n",
+        "### Evaluation results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Sample Recommendations\n",
         "\n",
-        "Generate and display some sample recommendations using the evaluated algorithms. This will show us what kind of recommendations each algorithm produces for a few example users."
+        "Generate and display some sample recommendations using the evaluated algorithms. \n",
+        "\n",
+        "This will show us what kind of recommendations each algorithm produces for a few example users."
       ]
     },
     {
@@ -134,7 +149,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
