--- a/notebooks/09-DeepLearning/RBMTuning.ipynb
+++ b/notebooks/09-DeepLearning/RBMTuning.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Setup and Imports\n",
+        "### Setup and Imports\n",
         "\n",
         "First, let's import the necessary libraries and set up our random seeds for reproducibility."
       ]
@@ -32,6 +32,7 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
@@ -41,7 +42,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load Data\n",
+        "### Load Data\n",
         "\n",
         "Load the MovieLens dataset and prepare it for evaluation."
       ]
@@ -52,15 +53,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Grid Search for Best Parameters\n",
+        "### Grid Search for Best Parameters\n",
         "\n",
         "We'll use GridSearchCV to find the optimal hyperparameters for the RBM algorithm. We'll search over:\n",
         "- Hidden dimensions (10, 20)\n",
@@ -82,7 +82,7 @@
         "}\n",
         "gs = GridSearchCV(RBM, param_grid, measures=['rmse', 'mae'], cv=3)\n",
         "\n",
-        "gs.fit(evaluation_dataset)\n",
+        "gs.fit(ratings_data)\n",
         "\n",
         "# best RMSE score\n",
         "print(\"Best RMSE score attained: \", gs.best_score['rmse'])\n",
@@ -95,7 +95,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Initialize Evaluator and Add Algorithms\n",
+        "### Initialize Evaluator and Add Algorithms\n",
         "\n",
         "Now we'll create an evaluator and add three algorithms to compare:\n",
         "1. RBM with tuned parameters (using the best parameters found by GridSearchCV)\n",
@@ -109,18 +109,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluation_dataset, rankings)\n",
+        "evaluator = Evaluator(ratings_data, rankings)\n",
         "\n",
         "# Add tuned RBM\n",
         "params = gs.best_params['rmse']\n",
-        "RBMtuned = RBM(hidden_dim=params['hidden_dim'], \n",
+        "rbm_tuned = RBM(hidden_dim=params['hidden_dim'], \n",
         "                       learning_rate=params['learning_rate'])\n",
-        "evaluator.add_algorithm(RBMtuned, \"RBM - Tuned\")\n",
+        "evaluator.add_algorithm(rbm_tuned, \"RBM - Tuned\")\n",
         "\n",
         "# Add untuned RBM\n",
-        "RBMUntuned = RBM()\n",
-        "evaluator.add_algorithm(RBMUntuned, \"RBM - Untuned\")\n",
+        "rbm_untuned = RBM()\n",
+        "evaluator.add_algorithm(rbm_untuned, \"RBM - Untuned\")\n",
         "\n",
         "# Add random recommendations as baseline\n",
         "Random = NormalPredictor()\n",
@@ -131,7 +130,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Algorithms\n",
+        "### Evaluate Algorithms\n",
         "\n",
         "Run the evaluation to compare the performance of all algorithms. This will help us understand the impact of hyperparameter tuning on the RBM's performance."
       ]
@@ -142,15 +141,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(True)\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Sample Recommendations\n",
+        "### Evaluation results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Sample Recommendations\n",
         "\n",
         "Generate and display some sample recommendations using the evaluated algorithms. This will help us qualitatively assess the differences between tuned and untuned RBM recommendations."
       ]
@@ -161,7 +178,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
