--- a/notebooks/13-Hybrid/HybridTest.ipynb
+++ b/notebooks/13-Hybrid/HybridTest.ipynb
@@ -6,7 +6,9 @@
       "source": [
         "# Hybrid Recommender System Test\n",
         "\n",
-        "This notebook demonstrates how to combine different recommendation algorithms into a hybrid system. We'll combine a Restricted Boltzmann Machine (RBM) with a Content-based KNN algorithm and compare their individual and combined performance."
+        "This notebook demonstrates how to combine different recommendation algorithms into a hybrid system. \n",
+        "\n",
+        "We'll combine a Restricted Boltzmann Machine (RBM) with a Content-based KNN algorithm and compare their individual and combined performance."
       ]
     },
     {
@@ -20,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -30,6 +32,7 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
@@ -50,8 +53,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load up common data set for the recommender algorithms\n",
-        "ml, ratings_data, rankings = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
@@ -69,7 +71,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Construct an Evaluator to, you know, evaluate them\n",
         "evaluator = Evaluator(ratings_data, rankings)"
       ]
     },
@@ -92,13 +93,13 @@
       "outputs": [],
       "source": [
         "# Simple RBM\n",
-        "SimpleRBM = RBM(epochs=40)\n",
+        "simple_rbm = RBM(epochs=40)\n",
         "\n",
         "# Content-based KNN\n",
-        "ContentKNN = ContentKNN()\n",
+        "content_knn = ContentKNN()\n",
         "\n",
         "# Combine them with equal weights\n",
-        "Hybrid = Hybrid([SimpleRBM, ContentKNN], [0.5, 0.5])"
+        "hybrid_rec = Hybrid([simple_rbm, content_knn], [0.5, 0.5])"
       ]
     },
     {
@@ -116,9 +117,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.add_algorithm(SimpleRBM, \"RBM\")\n",
-        "evaluator.add_algorithm(ContentKNN, \"ContentKNN\")\n",
-        "evaluator.add_algorithm(Hybrid, \"Hybrid\")"
+        "evaluator.add_algorithm(simple_rbm, \"RBM\")\n",
+        "evaluator.add_algorithm(content_knn, \"ContentKNN\")\n",
+        "evaluator.add_algorithm(hybrid_rec, \"Hybrid\")"
       ]
     },
     {
@@ -136,8 +137,26 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(False)\n",
-        "results"
+        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Evaluation results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(\n",
+        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+        ")\n",
+        "results_df"
       ]
     },
     {
@@ -155,14 +174,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples = evaluator.sample_top_n_recs(lens)\n",
         "samples"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -176,7 +195,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
